# crocus-tools

./: .gitignore  __init__.py  __main__.py  boundaries.py  canopy.py  footprints.py  geometry.py  pyproject.toml
crocus/: buildings.py  city4cfd.py  cli.py  config.py  las_bnds.py  las_prep.py  visualization.py
crocus/tests/: test_boundaries.py  test_config.py  test_las_bnds.py
tests/: test_canopy.py  test_footprints.py  test_geometry.py
